@@ -121,22 +121,6 @@ void RepeatMeasure::layout()
       }
 
 //---------------------------------------------------------
-//   canvasPos
-//---------------------------------------------------------
-
-QPointF RepeatMeasure::canvasPos() const
-      {
-      if (parent() == 0)
-            return pos();
-      double xp = x();
-      for (Element* e = parent(); e; e = e->parent())
-            xp += e->x();
-      System* system = segment()->measure()->system();
-      double yp = y() + system->staff(staffIdx())->y() + system->y();
-      return QPointF(xp, yp);
-      }
-
-//---------------------------------------------------------
 //   Marker
 //---------------------------------------------------------
 
